--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="content">
         <div id="home" class="active">
             <h1>Welcome to Halt Hate</h1>
-            <p>This is the home page of your app's website.</p>
+            <p>This is the home page of Halt Hate's website.</p>
         </div>
 
         <div id="support">
